[package]
name = "bleps"
version = "0.1.0"
edition = "2021"
authors = ["Bjoern Quentin <bjoern.quentin@mobile-j.d>"]
description  = "HCI BLE peripheral stack"
repository   = "https://github.com/bjoernQ/bleps"
license      = "MIT OR Apache-2.0"

keywords = [
    "no-std",
]
categories = [
    "embedded",
    "hardware-support",
    "no-std",
]

[dependencies]
bleps-dedup = { path = "../bleps-dedup" }

log = {version = "0.4.16"}

defmt = {version = "0.3", optional = true }
bleps-macros = { path = "../bleps-macros", optional = true }
rand_core = "0.6.4"

binrw = { version = "0.14.0", default-features = false }
modular-bitfield = "0.11.2"

heapless = { version = "0.8.0", features = ["defmt-03"] }

maybe-async = "0.2.10"

embedded-io = { version = "0.6.1", optional = true}

embedded-io-async = { version = "0.6.0", optional = true }
futures = { version = "0.3", default-features = false, optional = true }
critical-section = { version = "1.0.1", optional = true }



# crypto feature
# p256 = { version = "0.13.2", default-features = false, features = ["ecdh","arithmetic"], optional = true }
# aes = { version = "0.8.2", optional = true }
# cmac = { version = "0.7.2", optional = true }

[dev-dependencies]
env_logger = "0.10.0"
p256 = { version = "0.13.2", default-features = true }

[features]
async = [ "dep:embedded-io-async", "dep:futures", "dep:critical-section", "bleps-dedup/generate-async" ]
sync = ["dep:embedded-io", "maybe-async/is_sync"]

macros = [ "bleps-macros" ]
mtu128 = []
mtu256 = []

default = ["sync", "defmt"]
